2008-10-22  Henri Häkkinen  <henux@users.sourceforge.net>

	GNU build system files.

2008-10-20  Henri Häkkinen  <henux@users.sourceforge.net>

	* rssfeed.c (rss_feed_parser): The feed parser now works in a
	background thread.

2008-10-19  Henri Häkkinen  <henux@users.sourceforge.net>

	* rssfeed.c: Rewrote the parser to use libxml2.  Changed to create
	menu from the feed.
	* main.c (create_feed_menu): Constructs the feed menu from the
	feed XML at the program startup.

2008-10-18  Henri Häkkinen  <henux@users.sourceforge.net>

	* rssfeed.c: Initial implementation of RSS feed parser.

2008-10-17  Henri Häkkinen  <henux@users.sourceforge.net>

	* main.c: Initial implementations of the system tray and
	application menu functionality.