@@ -1,3 +1,5 @@
 ## Process this file with automake to produce a Makefile.in file.
 
 SUBDIRS = data src
+
+EXTRA_DIST = README
